# hamishapps

./: .gitignore  README.md
.github/workflows/: cmake-multi-platform.yml
base/work/: CMakeLists.txt  imgui.ini
base/work/include/: Application.h  ConfigManager.h  GuiManager.h  HomeView.h  IView.h  SettingsView.h
base/work/include/views/: AboutView.h  SettingsView.h
base/work/include/widgets/: SettingsWidget.h  Widget.h
base/work/src/: Application.cpp  ConfigManager.cpp  GuiManager.cpp  main.cpp
base/work/src/views/: AboutView.cpp  HomeView.cpp  SettingsView.cpp
base/work/src/widgets/: SettingsWidget.cpp  Widget.cpp
